--- a/01.Github.md
+++ b/01.Github.md
@@ -13,13 +13,17 @@ Se requieren dos repositorios:
 # 2. Crear cuenta GITHub
 Esta cuenta se utilizará para el control de versiones de la aplicación (Dev)
 ## 2.1. Add ssh keys
+```vim
 ssh-keygen -q -N "" -C "user@lab.com"
+cat ~/.ssh/id_rsa.pub
+```
 
-## 2.2. Crear repositorio privado: Apps
+## 2.2. Crear repositorio privado: Dev
 ## 2.3. Agregar el repositorio al entorno local
 ```vim
-mkdir apps
-cd apps
+cd ~
+mkdir dev
+cd dev
 git init
 git remote add origin <ssh-link>
 git pull origin main
