--- a/03.App.md
+++ b/03.App.md
@@ -37,7 +37,7 @@ kubectl get secret regcred
 	- name: regcred
 ```
 - svc
-- Ingress (static ip-address)
+- Ingress (static ip-address) (opcional, en caso de usar GKE)
 ```vim
 gcloud compute addresses create api-static-ip --global
 
