--- a/04.Kustomize.md
+++ b/04.Kustomize.md
@@ -7,7 +7,7 @@ Los ambientes se dividen en Overlays.
 
 ![Kustomize](./assets/img/kustomize.jpeg)
 
-# 1. delete public ns
+# 1. Delete public ns
 ```vim
 kubectl delete ns public-stage --force --grace-period=0
 
