--- a/05.Kustomize Practice.md
+++ b/05.Kustomize Practice.md
@@ -1,11 +1,14 @@
 # 1. kustomize Practice (Production Overlay)<!-- omit in TOC -->
 
-# 1. Create static IP
+- namespace: public
+- 4 replicas
+
+# 1. Create static IP (GKE)
 ```vim
 gcloud compute addresses create api-static-ip-prod --global
 gcloud compute addresses describe api-static-ip-prod --format='value(address)' --global
 ```
-## Add new Static IP as a DNS record
+## Add new Static IP as a DNS record (GKE)
 # 2. Create production folder
 - /overlays/production
 
@@ -14,14 +17,14 @@ gcloud compute addresses describe api-static-ip-prod --format='value(address)' -
 - commonLables (optional)
 - resource: ns - base
 - Patches: File patch
-- Add Ingress patch: api-static-ip-prod
+- Add Ingress patch: api-static-ip-prod (GKE)
  ```yaml
  # json-pointer: ~1
  - op: replace
   path: /metadata/annotations/kubernetes.io~1ingress.global-static-ip-name
   value: api-static-ip-prod
  ```
-- Add PV & PVC patches
+- Optional: Add PV & PVC patches
 ## 3.1. build
 ```vim
 kustomize  build  overlay/production > prodtest.yaml
