--- a/06.ArgoCD.md
+++ b/06.ArgoCD.md
@@ -18,11 +18,30 @@ kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/st
 kubectl config set-context --current --namespace=argocd
 k get pods
 
-# HA (production)
+# Optional: HA (production)
 kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/master/manifests/ha/install.yaml
 ```
 
-# 3. UI Access -  Port-forward
+# 3. UI Access
+## 3.1. Option 1. NodePort
+```vim
+apiVersion: v1
+kind: Service
+metadata:
+    name: argo-nodeport
+    namespace: argocd
+spec:
+  ports:
+  - protocol: TCP
+    port: 8080
+    nodePort: 30088
+    targetPort: 8080
+  selector:
+    app.kubernetes.io/name: argocd-server
+  type: NodePort
+
+```
+## 3.2. Option 2. Port-forward
 ```vim
 kubectl -n argocd port-forward $(kubectl -n argocd get pod -l app.kubernetes.io/name=argocd-server -o jsonpath='{.items[0].metadata.name}') 8080:8080
 
@@ -35,7 +54,9 @@ kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.pas
 # pmRJ1FNQB6scaMrz
 ```
 
+
 ## 4.1. Install argocd cli
+```vim
 brew install argocd
 
 ó
@@ -44,8 +65,75 @@ sudo curl -sSL -o /usr/local/bin/argocd https://github.com/argoproj/argo-cd/rele
 
 sudo chmod +x /usr/local/bin/argocd
 
-# 5. Administration
-## 5.1. Users
+```
+
+# 5. Set New Repository (UI)
+- Connect Repo Using SSH (Git Deploy repo)
+- Name: apps
+- github ssh url (ej: git@github.com:<user>/<project>.git)
+- private id_rsa key
+
+
+
+
+# 6. Create Application
+> [sync options](https://argo-cd.readthedocs.io/en/stable/user-guide/sync-options/)
+## 6.1. UI
+- stage-public-api
+- sync automated, prune true, selfHeal: true
+- auto-create namespace
+- path: public-api/overlays/stage/
+- namespace: public-stage
+- Edit as YAML
+## 6.2. App YAML (Git Deploy repo)
+- folder apps/stage
+- public-api.yaml (copy-paste Argo Application yaml)
+```vim
+kubectl apply -f apps/public-api.yaml
+
+kubectl get application
+```
+
+## 6.3. Check ArgoCD UI Apps
+## 6.4. Check Pods: Running 2 replicas
+
+# 7. Change overlays/stage deployment replicas
+- 3 replicas
+
+## 7.1. Sync git repo
+
+```vim
+git add .
+git commit -m "update deployment replicas"
+git push origin main
+```
+> wait 3 min to auto-sync
+> argocd app sync <APP_NAME>
+
+
+## 7.2. Commands
+```vim
+argocd app list
+argocd app get <APP_NAME>
+argocd app history <APP_NAME>
+argocd app history <APP_NAME>
+argocd app delete <APP_NAME>
+
+argocd app create <OPTIONS>
+
+EJ:
+argocd app create kustomize-gitops-example \
+--project default \
+--repo https://github.com/cachac/gitops-certification-examples \
+--path "./kustomize-app/overlays/staging" \Miercoles
+```
+
+# 8. Optional. Expose Argo via Ingress
+> [yaml](./assets/argo/ingress.yaml)
+> [GKE load balancer](https://argo-cd.readthedocs.io/en/latest/operator-manual/ingress/#google-cloud-load-balancers-with-kubernetes-ingress)
+
+# 9. Administration
+## 9.1. Users
 > [user management](https://argo-cd.readthedocs.io/en/stable/operator-manual/user-management/)
 ```vim
 k get cm argocd-cm
@@ -55,11 +143,11 @@ argocd login --port-forward
 
 argocd account list --port-forward
 ```
-## 5.2. Login UI
+## 9.2. Login UI
 > localhost:8080
 > Username: admin
 
-## 5.3. Create Users & Roles
+## 9.3. Create Users & Roles
 > [user yaml](./assets/argo/cm-users.yaml)
 > [rbac](https://argo-cd.readthedocs.io/en/stable/operator-manual/rbac/)
 > [local users example](https://faun.pub/create-argo-cd-local-users-9e830db3763f)
@@ -79,76 +167,11 @@ k get cm argocd-rbac-cm
 k apply -f assets/argo/argocd-rbac-cm.yaml
 ```
 
-## 5.4. Disable admin user
+## 9.4. Disable admin user
 > [cm users](./assets/argo/cm-users.yaml)
 ```yaml
 admin.enabled: "false"
 ```
 
-## 5.5. Logout and login new user
+## 9.5. Logout and login new user
 
-# 6. Set New Repository (UI)
-- Connect Repo Using SSH (Git Deploy repo)
-- Name: apps
-- github ssh url (ej: git@github.com:<user>/<project>.git)
-- private id_rsa key
-
-
-# 7. Create Application
-> [sync options](https://argo-cd.readthedocs.io/en/stable/user-guide/sync-options/)
-## 7.1. UI
-- stage-public-api
-- sync automated, prune true, selfHeal: true
-- auto-create namespace
-- path: public-api/overlays/stage/
-- namespace: public-stage
-- Edit as YAML
-## 7.2. App YAML (Git Deploy repo)
-- folder apps/stage
-- public-api.yaml (copy-paste Argo Application yaml)
-```vim
-kubectl apply -f apps/public-api.yaml
-
-kubectl get application
-```
-
-## 7.3. Check ArgoCD UI Apps
-## 7.4. Check Pods: Running 2 replicas
-
-# 8. Change overlays/stage deployment replicas
-- 3 replicas
-
-## 8.1. Sync git repo
-
-```vim
-git add .
-git commit -m "update deployment replicas"
-git push origin main
-```
-> wait 3 min to auto-sync
-> argocd app sync <APP_NAME>
-
-
-## Commands
-```vim
-argocd app list
-argocd app get <APP_NAME>
-argocd app history <APP_NAME>
-argocd app history <APP_NAME>
-argocd app delete <APP_NAME>
-
-argocd app create <OPTIONS>
-
-EJ:
-argocd app create kustomize-gitops-example \
---project default \
---repo https://github.com/cachac/gitops-certification-examples \
---path "./kustomize-app/overlays/staging" \
---sync-policy auto \
---dest-namespace default \
---dest-server https://kubernetes.default.svc
-```
-
-# 9. Optional. Expose Argo via Ingress
-> [yaml](./assets/argo/ingress.yaml)
-> [GKE load balancer](https://argo-cd.readthedocs.io/en/latest/operator-manual/ingress/#google-cloud-load-balancers-with-kubernetes-ingress)
