--- a/06.ArgoCD.md
+++ b/06.ArgoCD.md
@@ -57,19 +57,26 @@ kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.pas
 
 ## 4.1. Install argocd cli
 ```vim
-brew install argocd
-
-ó
-
 sudo curl -sSL -o /usr/local/bin/argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
 
 sudo chmod +x /usr/local/bin/argocd
 
+ó
+
+brew install argocd
+```
+
+## 4.2. cli login
+```vim
+argocd login <IP>:30088  --insecure --grpc-web --username admin --password xxxxx
+
+ó
+argocd login --port-forward
 ```
 
 # 5. Set New Repository (UI)
-- Connect Repo Using SSH (Git Deploy repo)
-- Name: apps
+- Connect Repo Using SSH (Git "OPS" repo)
+- Name: ops
 - github ssh url (ej: git@github.com:<user>/<project>.git)
 - private id_rsa key
 
@@ -85,7 +92,7 @@ sudo chmod +x /usr/local/bin/argocd
 - path: public-api/overlays/stage/
 - namespace: public-stage
 - Edit as YAML
-## 6.2. App YAML (Git Deploy repo)
+## 6.2. App YAML (Git "OPS" repo)
 - folder apps/stage
 - public-api.yaml (copy-paste Argo Application yaml)
 ```vim
@@ -116,7 +123,6 @@ git push origin main
 argocd app list
 argocd app get <APP_NAME>
 argocd app history <APP_NAME>
-argocd app history <APP_NAME>
 argocd app delete <APP_NAME>
 
 argocd app create <OPTIONS>
@@ -127,6 +133,7 @@ argocd app create kustomize-gitops-example \
 --repo https://github.com/cachac/gitops-certification-examples \
 --path "./kustomize-app/overlays/staging" \Miercoles
 ```
+> FATA[0001] Argo CD server address unspecified
 
 # 8. Optional. Expose Argo via Ingress
 > [yaml](./assets/argo/ingress.yaml)
@@ -135,6 +142,8 @@ argocd app create kustomize-gitops-example \
 # 9. Administration
 ## 9.1. Users
 > [user management](https://argo-cd.readthedocs.io/en/stable/operator-manual/user-management/)
+> [rbac](https://argo-cd.readthedocs.io/en/stable/operator-manual/rbac/)
+
 ```vim
 k get cm argocd-cm
 argocd login --port-forward
