--- a/06.ArgoCD.md
+++ b/06.ArgoCD.md
@@ -24,7 +24,7 @@ kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/ma
 
 # 3. UI Access
 ## 3.1. Option 1. NodePort
-```vim
+```yaml
 apiVersion: v1
 kind: Service
 metadata:
@@ -139,7 +139,7 @@ argocd app create kustomize-gitops-example \
 > [yaml](./assets/argo/ingress.yaml)
 > [GKE load balancer](https://argo-cd.readthedocs.io/en/latest/operator-manual/ingress/#google-cloud-load-balancers-with-kubernetes-ingress)
 
-# 9. Administration
+# 9. Optional. Administration
 ## 9.1. Users
 > [user management](https://argo-cd.readthedocs.io/en/stable/operator-manual/user-management/)
 > [rbac](https://argo-cd.readthedocs.io/en/stable/operator-manual/rbac/)
