--- a/GKE/05.Kustomize Practice.md
+++ b/GKE/05.Kustomize Practice.md
@@ -38,3 +38,25 @@ kubectl apply -k  overlay/production
 # or
 k apply -f prodtest.yaml
 ```
+
+# Opcional: Aplicar recursos diferentes para cada ambiente:
+## Stage
+```yaml
+        resources:
+          limits:
+            cpu: 20m
+            memory: 200Mi
+          requests:
+            cpu: 10m
+            memory: 50Mi
+```
+## Production
+```yaml
+        resources:
+          limits:
+            cpu: 50m
+            memory: 300Mi
+          requests:
+            cpu: 25m
+            memory: 100Mi
+```
