--- a/05.Kustomize Practice.md
+++ b/05.Kustomize Practice.md
@@ -2,8 +2,8 @@
 
 - namespace: public
 - 4 replicas
-
-
+- Config map: PRIVATE_API:  PROD_ENDPOINT
+- Ingress patch: api.USERLAB.kubelabs.dev
 # 2. Create production folder
 - /overlays/production
 
@@ -11,8 +11,8 @@
 - namespace
 - commonLables (optional)
 - resource: ns - base
-- Patches: File patch
-- Add Ingress patch: api.USERLAB.kubelabs.dev
+- Patches: File patch or in-line patch
+
 ## 3.1. build
 ```vim
 kustomize  build  overlay/production > prodtest.yaml
