--- a/06.ArgoCD.md
+++ b/06.ArgoCD.md
@@ -16,7 +16,7 @@ kubectl create namespace argocd
 kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
 
 kubectl config set-context --current --namespace=argocd
-k get pods
+kubectl get pods
 
 # Optional: HA (production)
 kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/master/manifests/ha/install.yaml
@@ -73,8 +73,13 @@ argocd login <IP>:30088  --insecure --grpc-web --username admin --password xxxxx
 ó
 argocd login --port-forward
 ```
+### 4.2.1. test cli
+```vim
+argocd app list
+```
 
 # 5. Set New Repository (UI)
+- Settings - Repositories
 - Connect Repo Using SSH (Git "OPS" repo)
 - Name: ops
 - github ssh url (ej: git@github.com:<user>/<project>.git)
@@ -85,24 +90,45 @@ argocd login --port-forward
 
 # 6. Create Application
 > [sync options](https://argo-cd.readthedocs.io/en/stable/user-guide/sync-options/)
-## 6.1. UI
-- stage-public-api
+## 6.1. Option 1: UI
+- Applications - Create Application
+- Name: stage-public-api
 - sync automated, prune true, selfHeal: true
+- Repository URL: ej, git@github.com:cachac/ops.git
 - auto-create namespace
 - path: public-api/overlays/stage/
+- cluster URL: https://kubernetes.default.svc
 - namespace: public-stage
-- Edit as YAML
-## 6.2. App YAML (Git "OPS" repo)
-- folder apps/stage
-- public-api.yaml (copy-paste Argo Application yaml)
+
+
+> Kustomize image:version autodetect
+
+
+## 6.2. Create Application
+- Check App Status
+- Check App Diagram
+- Check app Details
+- Check pod Details
+- Check Sync Status
+- Sync Forced
+
+> [Ingress Progressing](https://argo-cd.readthedocs.io/en/stable/faq/#why-is-my-application-stuck-in-progressing-state)
+
+
+## 6.3. Delete Application
+## 6.4. Option 2: App YAML (Git "OPS" repo)
+> [public-api YAML](./assets/apps-files/../argo/apps/public-api.yaml)
+- Create folder in OPS repo: apps/stage
+- public-api.yaml
 ```vim
 kubectl apply -f apps/public-api.yaml
 
 kubectl get application
+argocd app list
 ```
 
-## 6.3. Check ArgoCD UI Apps
-## 6.4. Check Pods: Running 2 replicas
+## 6.5. Check ArgoCD UI Apps
+## 6.6. Check Pods: Running 2 replicas
 
 # 7. Change overlays/stage deployment replicas
 - 3 replicas
