--- a/08.Actions.md
+++ b/08.Actions.md
@@ -96,7 +96,7 @@ env:
   REGISTRY: cachac
   IMAGE_NAME: kubelabs_publicapitemp
   DEPLOY_BRANCH: main
-  DEPLOY_REPO: cachac/deploy_demo
+  DEPLOY_REPO: cachac/ops
 
 jobs:
 
@@ -112,25 +112,25 @@ jobs:
       - uses: actions/checkout@v3 # checkout github code
         name: Checkout code
         with:
-          fetch-depth: 0
+          fetch-depth: 0 # fetch tags
 ```
 
 ## 3.2. Login to Registry (Docker Hub)
-- Secrets: DOCKER_USERNAME & DOCKER_PASSWORD
+- Add Secrets: DOCKER_USERNAME & DOCKER_PASSWORD
 ```yaml
     - name: Login to DockerHub
-      uses: docker/login-action@v1
+      uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 ```
 
-## 3.3. Docker Container Build & Push (Aplication latest version)
+## 3.3. Docker Container Build & Push (Image  Tag: latest version)
 > [Docker Buildx](https://github.com/docker/build-push-action)
 
-- Args secret
+- Add secret: APP_ENV
 ```vim
-APP_ENV={ "APP_NAME":"backend", "NODE_ENV":"production", "NODE_PORT":"3000", "TOKEN_LIMIT":"7d", "TOKEN_SECRET":"PASS" }
+APP_ENV={ "APP_NAME":"backend", "NODE_ENV":"stage", "NODE_PORT":"3000", "TOKEN_LIMIT":"7d", "TOKEN_SECRET":"PASS" }
 ```
 
 ```yaml
@@ -146,7 +146,7 @@ APP_ENV={ "APP_NAME":"backend", "NODE_ENV":"production", "NODE_PORT":"3000", "TO
 ## 3.4. Optional: Docker run (testing container)
 ```yaml
     - name: Build the Docker image
-      run: docker run --rm --name api -p 3000:3000 cachac/kubelabs_publicapi_test
+      run: docker run --rm --name api -p 3000:3000 cachac/IMAGE_NAME
 ```
 
 # 4. Check Docker Hub container latest version
@@ -269,7 +269,7 @@ Descarga el código del repo OPS en el pipeline para hacer el cambio de versión
           git push --force origin
 ```
 
-# 7. Check git deploy repo (UI)
+# 7. Check git OPS repo (UI)
 # 8. Check Argo Changes
 
 # 9. Change application package.jason version
