--- a/09.Actions Practice.md
+++ b/09.Actions Practice.md
@@ -1,6 +1,6 @@
 # 10. Github Actions <!-- omit in toc -->
 
-# 1. CI-CD: Production Application (main branch)
+# 1. CI-CD: Create a Production Application Workflow (main branch)
 
   pull_request:
     branches: [ "main" ]
