--- a/07.ArgoCD Practice.md
+++ b/07.ArgoCD Practice.md
@@ -1,17 +1,18 @@
 # 1. 09 Argo CD Practice <!-- omit in TOC-- >
-# 2. Delete ArgoCD
+# 2. Delete ArgoCD namespace
 ```vim
-k delete ns argocd -n argocd --force --grace-period=0
+kubectl delete ns argocd -n argocd --force --grace-period=0
 ```
 
 
 # 3. Install ArgoCD
-# 4. Get Admin User Password & Login
+# 4. Get Admin Password & Login
 # 5. Add Git Repo
 # 6. Create Applications:
 ## 6.1. Stage api
 ## 6.2. Production api
 
 # 7. CheckPoint
+- check pods running (Namespaces: public-stage & public)
 - check api-stage.<NAME>.kubelabs.tk
 - check api.<NAME>.kubelabs.tk
