--- a/10.Fulllab.md
+++ b/10.Fulllab.md
@@ -1,11 +1,5 @@
 # Full Lab <!-- omit in toc -->
 > [yamls](./assets/apps-files/../FullLab)
 
-CI/CD flow:
 
-# 1. Create Public API: Stage + Public
-
-# 2. Opcionales
-## 2.1. Create Webapp
-## 2.2. Create Websocket
-## 2.3. Create Private API
+# 1. Create Public API apps: Stage + Public
