--- a/06.ArgoCD.md
+++ b/06.ArgoCD.md
@@ -114,9 +114,18 @@ argocd app list
 
 > [Ingress Progressing](https://argo-cd.readthedocs.io/en/stable/faq/#why-is-my-application-stuck-in-progressing-state)
 
+## 6.3. Manual scale
+```vim
+kubectl scale --replicas 3 deploy public-api  -n public-stage
 
-## 6.3. Delete Application
-## 6.4. Option 2: App YAML (Git "OPS" repo)
+```
+> ArgoCD SYNC (self heal)
+
+## 6.4. Edit replicas in GitHub
+> ArgoCD SYNC (self heal)
+
+## 6.5. Delete Application
+## 6.6. Option 2: App YAML (Git "OPS" repo)
 > [public-api YAML](./assets/apps-files/../argo/apps/public-api.yaml)
 - Create folder in OPS repo: apps/stage
 - public-api.yaml
@@ -127,8 +136,8 @@ kubectl get application
 argocd app list
 ```
 
-## 6.5. Check ArgoCD UI Apps
-## 6.6. Check Pods: Running 2 replicas
+## 6.7. Check ArgoCD UI Apps
+## 6.8. Check Pods: Running 2 replicas
 
 # 7. Change overlays/stage deployment replicas
 - 3 replicas
