--- a/08.Actions.md
+++ b/08.Actions.md
@@ -95,8 +95,8 @@ on:
 env:
   REGISTRY: cachac
   IMAGE_NAME: kubelabs_publicapitemp
-  DEPLOY_BRANCH: main
-  DEPLOY_REPO: cachac/ops
+  OPS_BRANCH: main
+  OPS_REPO: cachac/ops
 
 jobs:
 
@@ -230,7 +230,7 @@ Descarga el código del repo OPS en el pipeline para hacer el cambio de versión
     steps:
       - uses: actions/checkout@v3
         with:
-          repository: ${{ env.DEPLOY_REPO }}
+          repository: ${{ env.OPS_REPO }}
           # token: ${{ secrets.DEPLOY_TOKEN }}
           ssh-key: ${{ secrets.DEPLOY_TOKEN }}
 ```
