--- a/08.Actions.md
+++ b/08.Actions.md
@@ -145,8 +145,8 @@ APP_ENV={ "APP_NAME":"backend", "NODE_ENV":"stage", "NODE_PORT":"3000", "TOKEN_L
 ```
 ## 3.4. Optional: Docker run (testing container)
 ```yaml
-    - name: Build the Docker image
-      run: docker run --rm --name api -p 3000:3000 cachac/IMAGE_NAME
+    - name: Run test
+      run: docker run --rm --name api -p 3000:3000 ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
 ```
 
 # 4. Check Docker Hub container latest version
@@ -264,7 +264,7 @@ Descarga el código del repo OPS en el pipeline para hacer el cambio de versión
         run: |
           git config --local user.email "deploy-bot@stotylabs.dev"
           git config --local user.name "Storylabs deploy-Bot"
-					git add .
+          git add .
           git commit -am "New image version, branch: staging, tag: ${{ env.VERSION }}"
           git push --force origin
 ```
