--- a/07.ArgoCD Practice.md
+++ b/07.ArgoCD Practice.md
@@ -1,4 +1,8 @@
 # 1. 09 Argo CD Practice <!-- omit in TOC-- >
+
+## Info. namespaces
+- stage: public-stage
+- production: public
 # 2. Delete ArgoCD namespace
 ```vim
 kubectl delete ns argocd -n argocd --force --grace-period=0
@@ -14,5 +18,4 @@ kubectl delete ns argocd -n argocd --force --grace-period=0
 
 # 7. CheckPoint
 - check pods running (Namespaces: public-stage & public)
-- check api-stage.<NAME>.kubelabs.tk
-- check api.<NAME>.kubelabs.tk
+
