--- a/10.Fulllab.md
+++ b/10.Fulllab.md
@@ -1,5 +1,6 @@
 # Full Lab <!-- omit in toc -->
-> [yamls](./assets/apps-files/../FullLab)
+> [yamls demo](./assets/apps-files/../FullLab)
 
 
-# 1. Create Public API apps: Stage + Public
+# 1. Create version 5.0.0 in Stage branch
+# 2. Create version 5.0.0 in Production branch
