--- a/01.Github.md
+++ b/01.Github.md
@@ -1,5 +1,5 @@
 
-# 02. Github <!-- omit in TOC-->
+# 1. Github & App setup <!-- omit in TOC-->
 Control de versiones para los proyectos.
 
 Se requieren dos repositorios:
@@ -29,7 +29,7 @@ git remote add origin <ssh-link>
 git pull origin main
 ```
 
-## Git branch
+## 2.4. Git branch
 El repositorio de aplicacion requiere dos Branches: State y Main (Producción)
 
 - stage
