--- a/03.Ops.md
+++ b/03.Ops.md
@@ -1,5 +1,5 @@
 
-# 03. Kubernetes definitions files <!-- omit in toc -->
+# 03. OPS: Kubernetes definitions files <!-- omit in toc -->
 
 # 1. Crear un segundo repositorio Git Privado: Ops
 Este repositorio contiene los archivos YAML con los recursos de Kubernetes.
