--- a/01.Github.md
+++ b/01.Github.md
@@ -40,7 +40,7 @@ git checkout -b stage
 git push -u origin stage
 ```
 
-# 3. Agregar la App kubelabs (public-api) and subir el código a GitHub
+# 3. Agregar la App kubelabs (public-api) y subir el código a GitHub
 - copy assets/dev/public-api folder
 ```vim
 ejemplo:
@@ -80,7 +80,6 @@ export API_NAME=kubelabs_publicapi
 export VERSION=1.0.0
 
 docker build . -t $REGISTRY/$API_NAME:$VERSION --build-arg APP_ENV="$APP_ENV_KUBE_API"
-docker login
 docker push $REGISTRY/$API_NAME:$VERSION
 
 # test
