--- a/03.Ops.md
+++ b/03.Ops.md
@@ -10,9 +10,12 @@ Este repositorio contiene los archivos YAML con los recursos de Kubernetes.
 YAML's de Kubernetes de la aplicación DEMO: public-api
 
 >[files](./assets/apps-files/public-api/)
-- folder public-api
-- ns public
-- cm
+Folder:
+- public-api
+
+Files:
+- namespace
+- config map
 - deploy (image name and version)
 - registry access:
 > [info](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/)
@@ -33,12 +36,18 @@ kubectl get secret regcred
 ```
 - agregar el secret al deploy.yaml para descargar la imagen
 ```yaml
-	imagePullSecrets:
-	- name: regcred
+imagePullSecrets:
+- name: regcred
 ```
 - svc
 
 - ingress: (change USERLAB)
+- Check ingressClass
+
+> [Private Image](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/)
+> [Secret Types](https://kubernetes.io/docs/concepts/configuration/secret/#secret-types)
+
+## 1.3. apply yamls
 
 ## 1.4. check ingress
 ```vim
@@ -67,7 +76,7 @@ minikube addons enable metallb
 minikube tunnel
 minikube service svc-public-api -n public-stage --url
 ```
-# 3. test URL api
+# 2. test URL api
 - /
 - /graphql
 - curl http://api.cachac.kubelabs2.tk
