--- a/06.ArgoCD.md
+++ b/06.ArgoCD.md
@@ -1,4 +1,4 @@
-# 1. Argo CD <!-- omit in TOC-- >
+# 1. Argo CD <!-- omit in toc -->
 >[core concepts](https://argo-cd.readthedocs.io/en/stable/core_concepts/)
 Se encarga de escuchar al repositorio OPS, que tiene los archivos YAML de kubernetes
 Cuando encuentra un cambio en la configuración, aplica esos cambios en el cluster.
