--- a/07.ArgoCD Practice.md
+++ b/07.ArgoCD Practice.md
@@ -1,4 +1,4 @@
-# 1. 09 Argo CD Practice <!-- omit in TOC-- >
+# 1. 09 Argo CD Practice <!-- omit in toc -->
 
 ## Info. namespaces
 - stage: public-stage
