--- a/01.Github.md
+++ b/01.Github.md
@@ -1,5 +1,5 @@
 
-# 1. Github & App setup <!-- omit in TOC-->
+# 01 Github & App setup <!-- omit in toc -->
 Control de versiones para los proyectos.
 
 Se requieren dos repositorios:
