--- a/02.KubernetesCluster.md
+++ b/02.KubernetesCluster.md
@@ -1,5 +1,5 @@
 
-# 02. Install Kubernetes Cluster <!-- omit in toc -->
+# 02 Install Kubernetes Cluster <!-- omit in toc -->
 
 ## 1. [GKE](./GKE.md)
 ## 2. [EKS](./EKS.md)
