--- a/04.Kustomize.md
+++ b/04.Kustomize.md
@@ -1,4 +1,4 @@
-# 04. kustomize <!-- omit in toc -->
+# 04 kustomize <!-- omit in toc -->
 > [kustomize](https://kustomize.io/)
 
 Kustomize automatiza la creación de recursos Kubernetes en diferentes ambientes.
