--- a/05.Kustomize Practice.md
+++ b/05.Kustomize Practice.md
@@ -1,25 +1,25 @@
-# 1. kustomize Practice (Production Overlay)<!-- omit in TOC -->
+# 05 kustomize Practice (Production Overlay)<!-- omit in toc -->
 
 - namespace: public
 - 4 replicas
 - Config map: PRIVATE_API:  PROD_ENDPOINT
 - Ingress patch: api.USERLAB.kubelabs.dev
-# 2. Create production folder
+# 1. Create production folder
 - /overlays/production
 
-# 3. Create kustomization.yaml
+# 2. Create kustomization.yaml
 - namespace
 - commonLables (optional)
 - resource: ns - base
 - Patches: File patch or in-line patch
 
-## 3.1. build
+## 2.1. build
 ```vim
 kustomize  build  overlay/production > prodtest.yaml
 ```
 
-## 3.2. Check prodtest.yaml file
-## 3.3. Apply
+## 2.2. Check prodtest.yaml file
+## 2.3. Apply
 ```vim
 kubectl apply -k  overlay/production
 
