--- a/07.ArgoCD Practice.md
+++ b/07.ArgoCD Practice.md
@@ -1,6 +1,6 @@
-# 1. 09 Argo CD Practice <!-- omit in toc -->
+# 07 Argo CD Practice <!-- omit in toc -->
 
-## Info. namespaces
+# 1. Info. namespaces
 - stage: public-stage
 - production: public
 # 2. Delete ArgoCD namespace
