--- a/08.Actions.md
+++ b/08.Actions.md
@@ -1,4 +1,4 @@
-# 10. Github Actions <!-- omit in toc -->
+# 08 Github Actions <!-- omit in toc -->
 > [syntax](https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions)
 
 ![Pipeline](./assets/img/pipeline.jpeg)
