--- a/06.ArgoCD.md
+++ b/06.ArgoCD.md
@@ -6,7 +6,7 @@ Cuando encuentra un cambio en la configuración, aplica esos cambios en el clust
 
 
 
-# 2. Install ArgoCD
+# 1. Install ArgoCD
 >[Install](https://argo-cd.readthedocs.io/en/stable/operator-manual/installation/)
 
 ```vim
@@ -22,8 +22,8 @@ kubectl get pods
 kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/master/manifests/ha/install.yaml
 ```
 
-# 3. UI Access
-## 3.1. Option 1. NodePort
+# 2. UI Access
+## 2.1. Option 1. NodePort
 ```yaml
 apiVersion: v1
 kind: Service
@@ -41,13 +41,13 @@ spec:
   type: NodePort
 
 ```
-## 3.2. Option 2. Port-forward
+## 2.2. Option 2. Port-forward
 ```vim
 kubectl -n argocd port-forward $(kubectl -n argocd get pod -l app.kubernetes.io/name=argocd-server -o jsonpath='{.items[0].metadata.name}') 8080:8080
 
 ```
 
-# 4. Get Admin secret password and login admin user
+# 3. Get Admin secret password and login admin user
 ```vim
 kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d && echo
 
@@ -55,7 +55,7 @@ kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.pas
 ```
 
 
-## 4.1. Install argocd cli
+## 3.1. Install argocd cli
 ```vim
 sudo curl -sSL -o /usr/local/bin/argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
 
@@ -66,19 +66,19 @@ sudo chmod +x /usr/local/bin/argocd
 brew install argocd
 ```
 
-## 4.2. cli login
+## 3.2. cli login
 ```vim
 argocd login <IP>:30088  --insecure --grpc-web --username admin --password xxxxx
 
 ó
 argocd login --port-forward
 ```
-### 4.2.1. test cli
+### 3.2.1. test cli
 ```vim
 argocd app list
 ```
 
-# 5. Set New Repository (UI)
+# 4. Set New Repository (UI)
 - Settings - Repositories
 - Connect Repo Using SSH (Git "OPS" repo)
 - Name: ops
@@ -88,14 +88,14 @@ argocd app list
 
 
 
-# 6. Create Application
+# 5. Create Application
 > [sync options](https://argo-cd.readthedocs.io/en/stable/user-guide/sync-options/)
-## 6.1. Option 1: UI
+## 5.1. Option 1: UI
 - Applications - Create Application
 - Name: stage-public-api
 - sync automated, prune true, selfHeal: true
-- Repository URL: ej, git@github.com:cachac/ops.git
 - auto-create namespace
+- Repository URL: ej, git@github.com:cachac/ops.git
 - path: public-api/overlays/stage/
 - cluster URL: https://kubernetes.default.svc
 - namespace: public-stage
@@ -103,8 +103,10 @@ argocd app list
 
 > Kustomize image:version autodetect
 
+## 5.2. View yaml and copy
+Paste: ops/argo-apps/public-api-stage.yaml
 
-## 6.2. Create Application
+## 5.3. Create Application
 - Check App Status
 - Check App Diagram
 - Check app Details
@@ -114,47 +116,35 @@ argocd app list
 
 > [Ingress Progressing](https://argo-cd.readthedocs.io/en/stable/faq/#why-is-my-application-stuck-in-progressing-state)
 
-## 6.3. Manual scale
+## 5.4. Manual scale
 ```vim
 kubectl scale --replicas 3 deploy public-api  -n public-stage
-
 ```
 > ArgoCD SYNC (self heal)
 
-## 6.4. Edit replicas in GitHub
+> Check 1 replica
+
+## 5.5. Edit 2 replicas in GitHub
 > ArgoCD SYNC (self heal)
-
-## 6.5. Delete Application
-## 6.6. Option 2: App YAML (Git "OPS" repo)
-> [public-api YAML](./assets/apps-files/../argo/apps/public-api.yaml)
-- Create folder in OPS repo: apps/stage
-- public-api.yaml
-```vim
-kubectl apply -f apps/public-api.yaml
-
-kubectl get application
-argocd app list
-```
-
-## 6.7. Check ArgoCD UI Apps
-## 6.8. Check Pods: Running 2 replicas
-
-# 7. Change overlays/stage deployment replicas
-- 3 replicas
-
-## 7.1. Sync git repo
 
 ```vim
 git add .
 git commit -m "update deployment replicas"
 git push origin main
 ```
+
+## 5.6. Check ArgoCD UI Apps
+## 5.7. Sync git repo
+## 5.8. Check Pods: Running 2 replicas
+
 > wait 3 min to auto-sync
 > argocd app sync <APP_NAME>
 
 
-## 7.2. Commands
+## 5.9. Commands
 ```vim
+kubectl get application -A
+
 argocd app list
 argocd app get <APP_NAME>
 argocd app history <APP_NAME>
@@ -170,12 +160,34 @@ argocd app create kustomize-gitops-example \
 ```
 > FATA[0001] Argo CD server address unspecified
 
-# 8. Optional. Expose Argo via Ingress
+# 6. App of Apps pattern
+> [public-api YAML](./assets/apps-files/../argo/apps/public-api.yaml)
+- in folder in OPS repo: argo-apps
+
+## 6.1. Delete state app
+## 6.2. Create new app: argo-apps
+- name: argo-apps
+- project: default
+- sync: auto
+- prune: true
+- self heal: true
+- set repository
+- path: argo-apps
+- set destination
+- namespace: argocd
+
+## 6.3. Copy yaml and paste
+/argo-apps/app-of-apps.yaml
+
+## 6.4. Create app
+- auto-create and sync public-api-stage
+- check kubernetes resources
+# 7. Optional. Expose Argo via Ingress
 > [yaml](./assets/argo/ingress.yaml)
 > [GKE load balancer](https://argo-cd.readthedocs.io/en/latest/operator-manual/ingress/#google-cloud-load-balancers-with-kubernetes-ingress)
 
-# 9. Optional. Administration
-## 9.1. Users
+# 8. Optional. Administration
+## 8.1. Users
 > [user management](https://argo-cd.readthedocs.io/en/stable/operator-manual/user-management/)
 > [rbac](https://argo-cd.readthedocs.io/en/stable/operator-manual/rbac/)
 
@@ -187,11 +199,11 @@ argocd login --port-forward
 
 argocd account list --port-forward
 ```
-## 9.2. Login UI
+## 8.2. Login UI
 > localhost:8080
 > Username: admin
 
-## 9.3. Create Users & Roles
+## 8.3. Create Users & Roles
 > [user yaml](./assets/argo/cm-users.yaml)
 > [rbac](https://argo-cd.readthedocs.io/en/stable/operator-manual/rbac/)
 > [local users example](https://faun.pub/create-argo-cd-local-users-9e830db3763f)
@@ -211,11 +223,11 @@ k get cm argocd-rbac-cm
 k apply -f assets/argo/argocd-rbac-cm.yaml
 ```
 
-## 9.4. Disable admin user
+## 8.4. Disable admin user
 > [cm users](./assets/argo/cm-users.yaml)
 ```yaml
 admin.enabled: "false"
 ```
 
-## 9.5. Logout and login new user
+## 8.5. Logout and login new user
 
