--- a/07.ArgoCD Practice.md
+++ b/07.ArgoCD Practice.md
@@ -11,11 +11,17 @@ kubectl delete ns argocd -n argocd --force --grace-period=0
 
 # 3. Install ArgoCD
 # 4. Get Admin Password & Login
-# 5. Add Git Repo
-# 6. Create Applications:
+# 5. Add Git Repos
+- public
+- stage
+# 6. Create Applications: using app of apps patern
 ## 6.1. Stage api
 ## 6.2. Production api
 
 # 7. CheckPoint
 - check pods running (Namespaces: public-stage & public)
+- delete production deployment
+```
+kubectl delete deployment public-api
+```
 
