--- a/06.ArgoCD.md
+++ b/06.ArgoCD.md
@@ -164,7 +164,7 @@ argocd app create kustomize-gitops-example \
 > [public-api YAML](./assets/apps-files/../argo/apps/public-api.yaml)
 - in folder in OPS repo: argo-apps
 
-## 6.1. Delete state app
+## 6.1. Delete stage app
 ## 6.2. Create new app: argo-apps
 - name: argo-apps
 - project: default
