--- a/06.ArgoCD.md
+++ b/06.ArgoCD.md
@@ -135,6 +135,12 @@ git push origin main
 
 ## 5.6. Check ArgoCD UI Apps
 ## 5.7. Sync git repo
+```
+argocd app sync --project default
+
+# o
+argocd app sync stage-public-api
+```
 ## 5.8. Check Pods: Running 2 replicas
 
 > wait 3 min to auto-sync
@@ -161,11 +167,13 @@ argocd app create kustomize-gitops-example \
 > FATA[0001] Argo CD server address unspecified
 
 # 6. App of Apps pattern
-> [public-api YAML](./assets/apps-files/../argo/apps/public-api.yaml)
-- in folder in OPS repo: argo-apps
+> [public-api YAML](./assets/apps-files/../argo/apps/stage-public-api.yaml)
+- new folder in OPS repo: /argo-apps
 
-## 6.1. Delete stage app
-## 6.2. Create new app: argo-apps
+## 6.1. add kubernetes yaml to /argo-apps
+## 6.2. Commit & Push to Github
+## 6.3. Delete stage app
+## 6.4. Create new app: argo-apps
 - name: argo-apps
 - project: default
 - sync: auto
@@ -176,11 +184,11 @@ argocd app create kustomize-gitops-example \
 - set destination
 - namespace: argocd
 
-## 6.3. Copy yaml and paste
+## 6.5. Copy yaml and paste
 /argo-apps/app-of-apps.yaml
 
-## 6.4. Create app
-- auto-create and sync public-api-stage
+## 6.6. Create app
+- check auto-create and sync public-api-stage Application
 - check kubernetes resources
 # 7. Optional. Expose Argo via Ingress
 > [yaml](./assets/argo/ingress.yaml)
