--- a/07.ArgoCD Practice.md
+++ b/07.ArgoCD Practice.md
@@ -5,16 +5,16 @@
 - production: public
 # 2. Delete ArgoCD namespace
 ```vim
-kubectl delete ns argocd -n argocd --force --grace-period=0
+kubectl delete ns argocd --force --grace-period=0
+kubectl delete ns public-state --force --grace-period=0
 ```
 
 
 # 3. Install ArgoCD
 # 4. Get Admin Password & Login
-# 5. Add Git Repos
-- public
-- stage
-# 6. Create Applications: using app of apps patern
+# 5. Add Git Repo (OPS)
+
+# 6. Create Applications: using app of apps pattern
 ## 6.1. Stage api
 ## 6.2. Production api
 
@@ -22,6 +22,13 @@ kubectl delete ns argocd -n argocd --force --grace-period=0
 - check pods running (Namespaces: public-stage & public)
 - delete production deployment
 ```
-kubectl delete deployment public-api
+kubectl delete deployment public-api -n public
+```
+- check Argo Self Heal
+- check Apps (CLI)
+```
+kubectl get apps -A
+
+argocd app sync --project default
 ```
 
