--- a/07.ArgoCD Practice.md
+++ b/07.ArgoCD Practice.md
@@ -20,14 +20,9 @@ kubectl delete ns public-state --force --grace-period=0
 
 # 7. CheckPoint
 - check pods running (Namespaces: public-stage & public)
-- delete production deployment
-```
-kubectl delete deployment public-api -n public
-```
-- check Argo Self Heal
 - check Apps (CLI)
 ```
-kubectl get apps -A
+kubectl get apps -n argocd
 
 argocd app sync --project default
 ```
