--- a/08.Actions.md
+++ b/08.Actions.md
@@ -55,13 +55,14 @@ env:
 ```yaml
 on:
 ...
- run: echo "Hello World ${{ secrets.SECRET_NAME }}!"
+	- name: print-secret
+	run: echo "Secret value:   ${{ secrets.SECRET_NAME }}"
 ```
 ## 1.5. Expressions
 >[expressions](https://docs.github.com/en/actions/learn-github-actions/expressions)
 
 ```yaml
-      - name: The job has succeeded?
+      - name: The job has succeded?
         if: ${{ success() }}
         run: echo "Job Succeded!!!"
 
