--- a/08.Actions.md
+++ b/08.Actions.md
@@ -72,7 +72,7 @@ on:
         run: echo "Job Fails :("
 ```
 
-> "Job has failed" have not been executed
+> "Job has failed" has not been executed
 
 ### 1.5.1. Force job to fail
 ```yaml
