--- a/08.Actions.md
+++ b/08.Actions.md
@@ -87,7 +87,7 @@ on:
 - Branch stage
 - env var for REGISTRY & IMAGE NAME
 ```yaml
-name: Docker Image CI
+name: CI-CD
 
 on:
   push:
@@ -131,7 +131,7 @@ jobs:
 
 - Add secret: APP_ENV
 ```vim
-APP_ENV={ "APP_NAME":"backend", "NODE_ENV":"stage", "NODE_PORT":"3000", "TOKEN_LIMIT":"7d", "TOKEN_SECRET":"PASS" }
+{ "APP_NAME":"backend", "NODE_ENV":"stage", "NODE_PORT":"3000", "TOKEN_LIMIT":"7d", "TOKEN_SECRET":"PASS" }
 ```
 
 ```yaml
@@ -181,17 +181,19 @@ git push origin stage  --tags
 ```
 ## 5.3. Docker Hub: Check new tag
 
+
+
 # 6. CD: Deploy to Kubernetes
 ## 6.1. output version from Build Job
-Update Step "New Tag Version"
+Update Step "Show new tag"
 ```yaml
-      - name: New Tag Version
+      - name: Show new tag
         id: tagVersion
         run: |
           echo ${{ env.RELEASE_VERSION }}
 
 					# Crea una variable tipo output para ser utilizada en otro JOB
-          echo "::set-output name=RELEASE_VERSION::${{ env.RELEASE_VERSION }}"
+          echo "RELEASE_VERSION=${{ env.RELEASE_VERSION }}" >> $GITHUB_OUTPUT
 ```
 Set an build Job Output
 ```yaml
@@ -217,7 +219,7 @@ Es necesaria una llave de acceso para la cuenta de OPS
 ## 6.3. Add new Secret in Application Repo
 Descarga el código del repo OPS en el pipeline para hacer el cambio de versión de la imagen de Kubernetes.
 
-> DEPLOY_TOKEN = ssh-private key or PAT
+> OPS_TOKEN = ssh-private key or PAT
 ## 6.4. New Job: deploy
 ```yaml
   deploy:
@@ -229,18 +231,19 @@ Descarga el código del repo OPS en el pipeline para hacer el cambio de versión
       VERSION: ${{ needs.build.outputs.RELEASE_VERSION }}
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout OPS code
+			  uses: actions/checkout@v3
         with:
           repository: ${{ env.OPS_REPO }}
-          # token: ${{ secrets.DEPLOY_TOKEN }}
-          ssh-key: ${{ secrets.DEPLOY_TOKEN }}
+          # token: ${{ secrets.OPS_TOKEN }}
+          ssh-key: ${{ secrets.OPS_TOKEN }}
 ```
 
 ## 6.5. set up kustomize
 >[market-place](https://github.com/marketplace/actions/setup-kustomize)
 ```yaml
  - name: Setup Kustomize
-        uses: imranismail/setup-kustomize@v1
+        uses: imranismail/setup-kustomize@v2
         with:
           kustomize-version: "3.6.1"
 ```
@@ -267,13 +270,29 @@ Descarga el código del repo OPS en el pipeline para hacer el cambio de versión
           git config --local user.name "Storylabs deploy-Bot"
           git add .
           git commit -am "New image version, branch: staging, tag: ${{ env.VERSION }}"
-          git push --force origin
+          git push --force origin ${{ env.OPS_BRANCH }}
 ```
 
-# 7. Check git OPS repo (UI)
-# 8. Check Argo Changes
+# 7. Commit action workflow
+# 8. Check git OPS repo (UI)
+# 9. Check Argo Changes
+# 10. Check pods
+```
+kubectl describe pods -n public-stage | grep Image:
+```
 
-# 9. Change application package.jason version
-## 9.1. verson 2.0.0
-## 9.2. new tag 2.0.0
-## 9.3. commit and push changes
+# 11. Optional: Avoid "Nothing to commit error"
+in step: Commit files
+```yaml
+git diff-index --quiet HEAD || git commit -am "New image version. Branch staging. tag: ${{ env.VERSION }}"
+```
+# 12. Optional: get commit hash
+(instead of git tag)
+```yaml
+run: echo "RELEASE_VERSION=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+```
+
+# 13. Change application package.jason version
+## 13.1. verson 2.0.0
+## 13.2. new tag 2.0.0
+## 13.3. commit and push changes
