--- a/08.Actions.md
+++ b/08.Actions.md
@@ -292,7 +292,7 @@ git diff-index --quiet HEAD || git commit -am "New image version. Branch staging
 run: echo "RELEASE_VERSION=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 ```
 
-# 13. Change application package.jason version
+# 13. Change application package.json version
 ## 13.1. verson 2.0.0
 ## 13.2. new tag 2.0.0
 ## 13.3. commit and push changes
