--- a/08.Actions.md
+++ b/08.Actions.md
@@ -280,6 +280,10 @@ Descarga el código del repo OPS en el pipeline para hacer el cambio de versión
 ```
 kubectl describe pods -n public-stage | grep Image:
 ```
+# 13. Change application package.json version
+## 13.1. version 2.0.0
+## 13.2. new tag 2.0.0
+## 13.3. commit and push changes
 
 # 11. Optional: Avoid "Nothing to commit error"
 in step: Commit files
@@ -292,7 +296,4 @@ git diff-index --quiet HEAD || git commit -am "New image version. Branch staging
 run: echo "RELEASE_VERSION=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 ```
 
-# 13. Change application package.json version
-## 13.1. verson 2.0.0
-## 13.2. new tag 2.0.0
-## 13.3. commit and push changes
+
