--- a/08.Actions.md
+++ b/08.Actions.md
@@ -83,11 +83,11 @@ on:
 # 2. Check Actions tab: docker image
 
 # 3. Build Docker image with args
-- filename: CI-CD.yaml
+- filename: stage.yaml
 - Branch stage
 - env var for REGISTRY & IMAGE NAME
 ```yaml
-name: CI-CD
+name: STAGE
 
 on:
   push:
