--- a/09.Actions Practice.md
+++ b/09.Actions Practice.md
@@ -5,7 +5,7 @@
   pull_request:
     branches: [ "main" ]
 
-# 2. Build production image
+# 2. Build production image by Pull Request
 # 3. Push new image to Registry
 # 4. Deploy new version using Kustomize
 # 5. Commit Changes to OPS repo
