--- a/01.Github.md
+++ b/01.Github.md
@@ -12,11 +12,12 @@ Se requieren dos repositorios:
 
 # 2. Crear cuenta GITHub
 Esta cuenta se utilizará para el control de versiones de la aplicación (Dev)
-## 2.1. Add ssh keys
+## 2.1. Crear llave ssh
 ```vim
 ssh-keygen -q -N "" -C "user@lab.com"
 cat ~/.ssh/id_rsa.pub
 ```
+## Agregar la llave a la cuenta Github
 
 ## 2.2. Crear repositorio privado: Dev
 ## 2.3. Agregar el repositorio al entorno local
@@ -24,9 +25,14 @@ cat ~/.ssh/id_rsa.pub
 cd ~
 mkdir dev
 cd dev
+
+echo "# dev" >> README.md
 git init
-git remote add origin <ssh-link>
-git pull origin main
+git add README.md
+git commit -m "first commit"
+git branch -M main
+git remote add origin <SSH LINK>
+git push -u origin main
 ```
 
 ## 2.4. Git branch
