--- a/01.Github.md
+++ b/01.Github.md
@@ -10,17 +10,17 @@ Se requieren dos repositorios:
 
 ![git repos](./assets/img/git.jpeg)
 
-# 2. Crear cuenta GITHub
+# 1. Crear cuenta GITHub
 Esta cuenta se utilizará para el control de versiones de la aplicación (Dev)
-## 2.1. Crear llave ssh
+## 1.1. Crear llave ssh
 ```vim
 ssh-keygen -q -N "" -C "user@lab.com"
 cat ~/.ssh/id_rsa.pub
 ```
-## Agregar la llave a la cuenta Github
+## 1.2. Agregar la llave a la cuenta Github
 
-## 2.2. Crear repositorio privado: Dev
-## 2.3. Agregar el repositorio al entorno local
+## 1.3. Crear repositorio privado: Dev
+## 1.4. Agregar el repositorio al entorno local
 ```vim
 cd ~
 mkdir dev
@@ -35,7 +35,7 @@ git remote add origin <SSH LINK>
 git push -u origin main
 ```
 
-## 2.4. Git branch
+## 1.5. Git branch
 El repositorio de aplicacion requiere dos Branches: State y Main (Producción)
 
 - stage
@@ -46,19 +46,29 @@ git checkout -b stage
 git push -u origin stage
 ```
 
-# 3. Agregar la App kubelabs (public-api) y subir el código a GitHub
-- copy assets/dev/public-api folder
-```vim
-ejemplo:
-cp -r assets/dev/public-api/* .
+# 2. Agregar la App kubelabs (public-api) y subir el código a GitHub
+## 2.1. Clonar el proyecto
 ```
-```vim
-git add .
-git commit -m 'init'
-git push -u origin stage
+git clone https://github.com/cachac/kubelabs.git
 ```
 
-# 4. Install Docker
+## 2.2. copy kubelabs/dev/public-api folder
+```vim
+cp -r kubelabs/dev/public-api/* .
+```
+## 2.3. remover archivos innecesarios
+```
+rm -rf kubelabs
+```
+
+## 2.4. Sincronizar el proyecto con Github - branch: stage
+```vim
+git add .
+git commit -m 'init code'
+git push origin stage
+```
+
+# 3. Install Docker
 > [docker](https://docs.docker.com/engine/install/ubuntu/)
 ```vim
 curl -fsSL https://get.docker.com -o get-docker.sh
@@ -68,16 +78,16 @@ newgrp docker
 ```
 
 
-# 5. DockerHub
+# 4. DockerHub
 
-## 5.1. Create Account
-## 5.2. Publish repo
+## 4.1. Create Account
+## 4.2. Publish repo
 > [login](https://docs.docker.com/engine/reference/commandline/login/)
 ```vim
 docker login
 ```
 
-# 6. Construir el contenedor Docker
+# 5. Construir el contenedor Docker
 ```vim
 source .env.qa
 echo $APP_ENV_KUBE_API
@@ -94,4 +104,4 @@ curl localhost:3080/healthcheck
 ```
 
 
-## 6.1. Hacer el Git repo privado
+## 5.1. Hacer el Git repo privado
