--- a/01.Github.md
+++ b/01.Github.md
@@ -79,8 +79,8 @@ newgrp docker
 
 
 # 4. DockerHub
-
 ## 4.1. Create Account
+> [Docker Hub](https://hub.docker.com/)
 ## 4.2. Publish repo
 > [login](https://docs.docker.com/engine/reference/commandline/login/)
 ```vim
@@ -92,11 +92,12 @@ docker login
 source .env.qa
 echo $APP_ENV_KUBE_API
 export REGISTRY=cachac
-export API_NAME=kubelabs_publicapi
-export VERSION=1.0.0
 
-docker build . -t $REGISTRY/$API_NAME:$VERSION --build-arg APP_ENV="$APP_ENV_KUBE_API"
-docker push $REGISTRY/$API_NAME:$VERSION
+docker build . -t $REGISTRY/kubelabs_publicapi:1.0.0 --build-arg APP_ENV="$APP_ENV_KUBE_API"
+
+docker images
+
+docker push $REGISTRY/kubelabs_publicapi:1.0.0
 
 # test
 docker run --rm --name api -p 3080:3080 $REGISTRY/$API_NAME:$VERSION
