--- a/01.Github.md
+++ b/01.Github.md
@@ -61,7 +61,13 @@ cp -r kubelabs/dev/public-api/* .
 rm -rf kubelabs
 ```
 
-## 2.4. Sincronizar el proyecto con Github - branch: stage
+## 2.4. editar la versión de la aplicación
+> package.json
+```
+  "version": "1.0.0",
+```
+
+## 2.5. Sincronizar el proyecto con Github - branch: stage
 ```vim
 git add .
 git commit -m 'init code'
@@ -100,9 +106,7 @@ docker images
 docker push $REGISTRY/kubelabs_publicapi:1.0.0
 
 # test
-docker run --rm --name api -p 3080:3080 $REGISTRY/$API_NAME:$VERSION
+docker run --rm --name api -p 3080:3080 $REGISTRY/kubelabs_publicapi:1.0.0
 curl localhost:3080/healthcheck
 ```
 
-
-## 5.1. Hacer el Git repo privado
