--- a/01.Github.md
+++ b/01.Github.md
@@ -47,30 +47,15 @@ git push -u origin stage
 ```
 
 # 2. Agregar la App kubelabs (public-api) y subir el código a GitHub
-## 2.1. Clonar el proyecto
-```
-git clone https://github.com/cachac/kubelabs.git
-```
-
-## 2.2. copy kubelabs/dev/public-api folder
+## 2.1. copy kubelabs/dev/public-api folder
 ```vim
-cp -r kubelabs/dev/public-api/* .
-```
-## 2.3. remover archivos innecesarios
-```
-rm -rf kubelabs
+ cp -r ../cicdlabs/assets/dev/public-api/* .
 ```
 
-## 2.4. editar la versión de la aplicación
-> package.json
-```
-  "version": "1.0.0",
-```
-
-## 2.5. Sincronizar el proyecto con Github - branch: stage
+## 2.2. Sincronizar el proyecto con Github - branch: stage
 ```vim
 git add .
-git commit -m 'init code'
+git commit -m 'starting code'
 git push origin stage
 ```
 
@@ -106,7 +91,10 @@ docker images
 docker push $REGISTRY/kubelabs_publicapi:1.0.0
 
 # test
-docker run --rm --name api -p 3080:3080 $REGISTRY/kubelabs_publicapi:1.0.0
+docker run -d --name api -p 3080:3080 $REGISTRY/kubelabs_publicapi:1.0.0
 curl localhost:3080/healthcheck
+
+docker ps
+docker rm -f api
 ```
 
