--- a/01.Github.md
+++ b/01.Github.md
@@ -46,8 +46,8 @@ git checkout -b stage
 git push -u origin stage
 ```
 
-# 2. Agregar la App kubelabs (public-api) y subir el código a GitHub
-## 2.1. copy kubelabs/dev/public-api folder
+# 2. Agregar la App CICDlabs (public-api) y subir el código a GitHub
+## 2.1. copy cicd/dev/public-api folder
 ```vim
  cp -r ../cicdlabs/assets/dev/public-api/* .
 ```
