--- a/01.Github.md
+++ b/01.Github.md
@@ -49,7 +49,7 @@ git push -u origin stage
 # 2. Agregar la App CICDlabs (public-api) y subir el código a GitHub
 ## 2.1. copy cicd/dev/public-api folder
 ```vim
- cp -r ../cicdlabs/assets/dev/public-api/* .
+ cp -r ../cicdlabs/assets/dev/public-api/. .
 ```
 
 ## 2.2. Sincronizar el proyecto con Github - branch: stage
@@ -72,7 +72,7 @@ newgrp docker
 # 4. DockerHub
 ## 4.1. Create Account
 > [Docker Hub](https://hub.docker.com/)
-## 4.2. Publish repo
+## 4.2. Login
 > [login](https://docs.docker.com/engine/reference/commandline/login/)
 ```vim
 docker login
@@ -91,10 +91,20 @@ docker images
 docker push $REGISTRY/kubelabs_publicapi:1.0.0
 
 # test
-docker run -d --name api -p 3080:3080 $REGISTRY/kubelabs_publicapi:1.0.0
-curl localhost:3080/healthcheck
-
+docker run -d --restart always --name api -p 3080:3080 $REGISTRY/kubelabs_publicapi:1.0.0
 docker ps
+
+curl localhost:3080/healthcheck
+curl localhost:3080/crash
+
+# check status (UP 2 seconds)
+docker ps
+
+# random crash: 0 = process.exit(1)
+curl localhost:3080/random_crash
+
 docker rm -f api
+
+docker ps -a
 ```
 
