--- a/03.Ops.md
+++ b/03.Ops.md
@@ -5,11 +5,27 @@
 Este repositorio contiene los archivos YAML con los recursos de Kubernetes.
 
 ## 1.1. Agregar el repositorio al entorno local
+```
+cd ..
+mkdir ops
+cd ops
+
+
+# github sync ()
+echo "# ops" >> README.md\n
+git init
+git add README.md
+git commit -m "first commit"
+git branch -M main
+git remote add origin <SSH LINK>
+git push -u origin main
+```
 
 ## 1.2. public-api yamls
 YAML's de Kubernetes de la aplicación DEMO: public-api
 
 >[files](./assets/apps-files/public-api/)
+
 Folder:
 - public-api
 
@@ -18,7 +34,9 @@ Files:
 - config map
 - deploy (image name and version)
 - registry access:
-> [info](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/)
+
+> [pull private image](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/)
+
 ```vim
 # cambiar al ns public-stage
 kubectl config set-context --current --namespace=public-stage
