--- a/03.Ops.md
+++ b/03.Ops.md
@@ -38,7 +38,8 @@ Files:
 > [pull private image](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/)
 
 ```vim
-# cambiar al ns public-stage
+# crear ns public-stage y moverse
+kubectl apply -f ns.yaml
 kubectl config set-context --current --namespace=public-stage
 
 # docker login
@@ -52,6 +53,7 @@ kubectl create secret generic regcred \
 
 kubectl get secret regcred
 ```
+
 - agregar el secret al deploy.yaml para descargar la imagen
 ```yaml
 imagePullSecrets:
@@ -95,6 +97,6 @@ minikube tunnel
 minikube service svc-public-api -n public-stage --url
 ```
 # 2. test URL api
-- /
-- /graphql
-- curl http://api.cachac.kubelabs2.tk
+- /healthcheck
+- /random_crash
+- curl http://api.cachac.kubelabs.<TLD>
